// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should display image if one is provided 1`] = `
<div
  className="src__StyledFieldset-sc-g1up10-0 dPBNcE"
>
  <span
    className="src__LabelText-sc-1lbxenh-0 fbxnwX"
  >
    Does this test pass?
  </span>
  <span
    className="src__ErrorText-sc-kkeaok-0 juPsoz"
  >
    Select an option
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 bACvJJ"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 bACvJJ"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the default snapshot 1`] = `
<div
  className="src__StyledFieldset-sc-g1up10-0 cJSRBo"
>
  <span
    className="src__LabelText-sc-1lbxenh-0 fbxnwX"
  >
    Does this test pass?
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 bACvJJ"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 bACvJJ"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with hint text snapshot 1`] = `
<div
  className="src__StyledFieldset-sc-g1up10-0 cJSRBo"
>
  <span
    className="src__LabelText-sc-1lbxenh-0 fbxnwX"
  >
    Does this test pass?
  </span>
  <span
    className="src__HintText-sc-tq1z5r-0 yOKdD"
  >
    Supporting text to help
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 bACvJJ"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 bACvJJ"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with meta and error snapshot 1`] = `
<div
  className="src__StyledFieldset-sc-g1up10-0 dPBNcE"
>
  <span
    className="src__LabelText-sc-1lbxenh-0 fbxnwX"
  >
    Does this test pass?
  </span>
  <span
    className="src__ErrorText-sc-kkeaok-0 juPsoz"
  >
    Select an option
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 bACvJJ"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 bACvJJ"
      >
        No
      </span>
    </label>
  </div>
</div>
`;
